--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chrisgaona.interactivestory.StoryActivity">
+    tools:context="com.chrisgaona.interactivestory.ui.StoryActivity">
 
 </android.support.constraint.ConstraintLayout>
